fixing generate slots, focus for datetime select, added cookies

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -92,6 +92,14 @@
 }
 
 .post-form-container {
+  .calendar-container {
+    width: 100%;
+  }
+
+  .btn-generate {
+    height: 35px;
+    width: 200px;
+  }
   .edit-actions {
     .btn-group {
       width: 100%;
