some bug refactoring, reservation made working

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -174,4 +174,12 @@
     border-radius:50px;
   }
 
+  .form-group {
+    margin-bottom: 0px;
+  }
+
+  .daterange {
+    background: white;
+  }
+
 }
