--- a/app/views/shared/modals/_contact_renter_modal.slim
+++ b/app/views/shared/modals/_contact_renter_modal.slim
@@ -1,4 +1,4 @@
-#modalContactForm.modal.fade aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" data-url=conversations_path(sender_id: current_user.id, recipient_id: @post.user.id)
+#modalContactForm.modal.fade aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" data-url=conversations_path(sender_id: current_user&.id, recipient_id: @post.user.id)
   .modal-dialog role="document"
     .modal-content
       .modal-header.text-center
