--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -10,6 +10,7 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_include_tag google_map_url
+    = javascript_include_tag 'https://kit.fontawesome.com/f1327831ac.js'
   body
     = render 'layouts/navbar'
     .container
