--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -20,6 +20,7 @@ nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
             .dropdown-toggle data-toggle="dropdown"
               = render 'shared/users/navbar_photo'
             .dropdown-menu.dropdown-menu-right
+              = link_to 'Profile', profile_index_path, class: 'dropdown-item'
               = link_to 'Account', edit_user_registration_path, class: 'dropdown-item'
               = link_to "Logout", destroy_user_session_path, method: :delete, class: 'dropdown-item'
         - else
