added addresses to post, added autofill for addresses and lat and long enabled maps on show

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -66,6 +66,9 @@
               = f.input :hp
             .col-md-6
               = f.input :price
+            .col-md-12
+              h3 Address
+            = render 'shared/addresses/fields', builder: f
           #photos-tab.tab-pane.fade aria-labelledby="contact-tab-just" role="tabpanel"
             .row
               .col-md-12
