added address to user

--- a/app/views/shared/addresses/_fields.slim
+++ b/app/views/shared/addresses/_fields.slim
@@ -1,15 +1,19 @@
 = builder.simple_fields_for :address do |address|
-  = address.input :latitude, as: :hidden, input_html: { class: 'js-latitude'  }
+  = address.input :latitude, as: :hidden, input_html: { class: 'js-latitude' }
   = address.input :longitude, as: :hidden, input_html: { class: 'js-longitude' }
-  .col-md-12
-    = address_autocomplete_input
-  .col-md-6
-    = address.input :address, input_html: { id: 'route' }
-  .col-md-6
-    = address.input :city, input_html: { id: 'locality' }
-  .col-md-6
-    = address.input :zip, input_html: { id: 'postal_code' }
-  .col-md-6
-    = address.input :street_number, input_html: { id: 'street_number' }
-  .col-md-6
-    = address.input :country, as: :select, collection: all_countries, input_html: { id: 'country' }
+  .row
+    .col-md-12
+      = address_autocomplete_input
+  .row
+    .col-md-6
+      = address.input :address, input_html: { id: 'route' }
+    .col-md-6
+      = address.input :city, input_html: { id: 'locality' }
+  .row
+    .col-md-6
+      = address.input :zip, input_html: { id: 'postal_code' }
+    .col-md-6
+      = address.input :street_number, input_html: { id: 'street_number' }
+  .row
+    .col-md-12
+        = address.input :country, as: :select, collection: all_countries, input_html: { id: 'country' }
