added map markers and connected them to posts

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -10,7 +10,8 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_include_tag google_map_url
-    = javascript_include_tag 'https://kit.fontawesome.com/f1327831ac.js'
+    = javascript_include_tag google_map_clusters
+    = javascript_include_tag font_awesome_url
   body
     = render 'layouts/navbar'
     .container
