--- a/app/views/shared/modals/_contact_renter_modal.slim
+++ b/app/views/shared/modals/_contact_renter_modal.slim
@@ -13,7 +13,7 @@
         .md-form
           i.fas.fa.fa-pencil.prefix.grey-text.mr-2
           label data-error="wrong" data-success="right" for="form8"  Your message
-          textarea#form8.md-textarea.form-control.js-message rows="4" type="text"
+          textarea#form8.md-textarea.form-control.js-message-container rows="4" type="text"
       .modal-footer.d-flex.justify-content-center
         button.btn.btn-unique.js-send-message
           | Send
