--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -203,3 +203,12 @@
   }
 
 }
+
+#searchMap{
+  width: 100%;
+  height: 300px;
+  //position: -webkit-sticky;
+  position: fixed;
+  top: 0;
+  z-index:100;
+}
