--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -11,7 +11,7 @@ body {
 .container {
   padding-top: 20px;
   min-height: 75vh;
-  background-color: white;
+  // background-color: white;
 }
 
 nav.navbar {
