added new landing page and added city filter

--- a/app/views/posts/search.slim
+++ b/app/views/posts/search.slim
@@ -1,4 +1,7 @@
-#searchMap
+- lat = params[:search][:latitude]
+- lng = params[:search][:longitude]
+
+#searchMap data-latitude=lat data-longitude=lng
 .pt-3
   .row
     .col-md-3
