--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -1,45 +1,37 @@
 - search_box = capture do
-  .col-md-6 style='margin-top: 70px;'
-      .search-box style='text-align: center;'
-        = simple_form_for :search, url: search_posts_path, method: 'GET' do |f|
-          .row
-            .col-md-11
-              .input-group
-                = f.input :availability_from, input_html: { class: "daterange picker-from" }, as: :string, label: false, placeholder: 'Select date from'
-                .input-group-append
-                  span.input-group-text.fa.fa-calendar
-              .input-group
-                = f.input :availability_to, input_html: { class: "daterange picker-to" }, as: :string, label: false, placeholder: 'Select date to'
-                .input-group-append
-                  span.input-group-text.fa.fa-calendar
-            .col-md-1
-
+  .search-box
+    = simple_form_for :search, url: search_posts_path, method: 'GET' do |f|
+      = f.input :latitude, as: :hidden, input_html: { class: 'js-latitude' }
+      = f.input :longitude, as: :hidden, input_html: { class: 'js-longitude' }
+      .row
+        .col-md-12
           .input-group
-            - seach_icon = content_tag :i, '', class: 'fa fa-search'
-            = f.submit 'Search', class: 'btn btn-search btn-success'
+            = f.input :availability_from, input_html: { class: "daterange picker-from" }, as: :string, label: false, placeholder: 'Select date from'
+      .row
+        .col-md-12
+          .input-group
+            = f.input :availability_to, input_html: { class: "daterange picker-to" }, as: :string, label: false, placeholder: 'Select date to'
+      .row
+        .col-md-12
+          .input-group
+            = f.submit 'Check availability', class: 'btn btn-search btn-success'
 
-end
+#booking.section
+  .section-center
+    .container
+      .row
+        .col-md-7.col-md-push-5
+          .booking-cta
+            h1 Make your reservation
+            p
+              | Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi facere, soluta magnam consectetur molestias itaque
+              | ad sint fugit architecto incidunt iste culpa perspiciatis possimus voluptates aliquid consequuntur cumque quasi.
+              | Perspiciatis.
+        .col-md-4.col-md-pull-7
+          .booking-form
+            .row
+              .form-group
+                span.form-label Location
+                = address_autocomplete_input
+              = search_box
 
-header
-  .row
-    .col-md-4.gray-bg.m-b
-      = image_tag 'logo.jpg'
-      = search_box
-    .col-md-8.gray-bg
-      #carouselExampleIndicators.carousel.slide.carousel-container data-ride="carousel"
-        ol.carousel-indicators
-          li.active data-slide-to="0" data-target="#carouselExampleIndicators"
-          li data-slide-to="1" data-target="#carouselExampleIndicators"
-          li data-slide-to="2" data-target="#carouselExampleIndicators"
-        .carousel-inner role="listbox"
-          .carousel-item.active style=("background-image: url('https://vmwebsitestore.blob.core.windows.net/media/vehicle-images/LM67FXS/a9aac297-088d-432f-8662-b991be5d33c2.jpg')")
-            .carousel-caption.d-none.d-md-block
-
-          .carousel-item style=("background-image: url('https://cdn.vox-cdn.com/thumbor/RIBWyNdFvgJU9D6DlhsKcHSc4kw=/0x0:5760x3840/1200x800/filters:focal(2420x1460:3340x2380)/cdn.vox-cdn.com/uploads/chorus_image/image/59293591/OSV18_01_PowerStation_Hero.0.jpg')")
-            .carousel-caption.d-none.d-md-block
-        a.carousel-control-prev data-slide="prev" href="#carouselExampleIndicators" role="button"
-          span.carousel-control-prev-icon aria-hidden="true"
-          span.sr-only Previous
-        a.carousel-control-next data-slide="next" href="#carouselExampleIndicators" role="button"
-          span.carousel-control-next-icon aria-hidden="true"
-          span.sr-only Next
