refactored locale files, added some translations to locales

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -18,6 +18,9 @@ nav.navbar {
   background-color: #323E5F !important;
   padding: 5px 100px;
 
+  .nav-link {
+    text-align: center;
+  }
   .nav-link:hover {
     background-color: #263343;
     color: white !important;
