default lat and lng, image from url on home

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -44,7 +44,7 @@
 }
 
 #booking {
-  background-image: url('car_landing.jpg');
+  background-image: url('https://kgmimaging.com/marketing/Assets/Site_Backgrounds/_JPGs/ELE_BACKGROUND.jpg');
   background-size: cover;
   background-position: center;
 }
