added highlight effect to posts, changed tab title

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -139,6 +139,11 @@
   transform: scale(1.05);
 }
 
+.scaled {
+  transform: scale(1.05);
+  background-color: #FFFCF7;
+}
+
 
 .post-show-container {
   .subtitle-container {
