--- a/app/views/layouts/home.slim
+++ b/app/views/layouts/home.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title RentAKombi
+    title RentajteME
     = csrf_meta_tags
     = csp_meta_tag
     meta name="viewport" content="width=device-width, initial-scale=1"
