--- a/app/views/posts/_filters.slim
+++ b/app/views/posts/_filters.slim
@@ -1,48 +1,61 @@
 .filters-search.shadow
   = simple_form_for :search, url: search_posts_path, method: 'GET' do |f|
+    = f.input :latitude, as: :hidden, input_html: { class: 'js-latitude' }
+    = f.input :longitude, as: :hidden, input_html: { class: 'js-longitude' }
+    h6 Location
+    .filter-content.price-field.mb-3.ml-1
+      = f.input :city, input_html: { class: 'js-address-autofill', value: sanitized_search_param(params, :city) }, label: false, placeholder: t('enter_address')
+
     .filter-title data-target=".category-field" data-toggle="collapse" aria-expanded="false"
       span Category
+      .checked-filter.hidden
     .filter-content.collapse.category-field
-      = f.input 'category', as: :select, collection: Category.all, include_blank: 'Select category', label: false
+      = f.input :category, as: :select, collection: Category.all, include_blank: 'Select category', label: false, selected: sanitized_search_param(params, :category)
 
     .filter-title data-target=".models-field" data-toggle="collapse" aria-expanded="false"
       span Model
+      .checked-filter.hidden
     .filter-content.models-field.collapse
-      = f.input 'model', as: :select, collection: capitalized_models, include_blank: 'Select model', label_method: :titleize, label: false
+      = f.input :model, as: :select, collection: capitalized_models, include_blank: 'Select model', label_method: :titleize, label: false, selected: sanitized_search_param(params, :model)
 
     .filter-title data-target=".price-field" data-toggle="collapse" aria-expanded="false"
       span Price
+      .checked-filter.hidden
     .filter-content.collapse.price-field
       .row
         .col-md-6
-          = f.input 'price_from', min: 0, max: 10000, input_html: { type: 'number', class: '' }, label: false, placeholder: 'From..'
+          = f.input :price_from, min: 0, max: 10000, input_html: { type: 'number', class: '', value: sanitized_search_param(params, :price_from) }, label: false, placeholder: 'From..'
         .col-md-6
-          = f.input 'price_to', min: 0, max: 10000, input_html: { type: 'number', class: '' }, label: false, placeholder: 'To...'
+          = f.input :price_to, min: 0, max: 10000, input_html: { type: 'number', class: '',  value: sanitized_search_param(params, :price_to) }, label: false, placeholder: 'To...'
 
     .filter-title data-target=".fuel-field" data-toggle="collapse" aria-expanded="false"
       span Fuel
+      .checked-filter.hidden
     .filter-content.collapse.fuel-field
-      = f.input 'fuel', as: :select, collection: capitalized_fuels, include_blank: 'Select fuel', label: false, label_method: :titleize
+      = f.input :fuel, as: :select, collection: capitalized_fuels, include_blank: 'Select fuel', label: false, label_method: :titleize, selected: sanitized_search_param(params, :fuel)
 
 
     .filter-title data-target=".transmission-field" data-toggle="collapse" aria-expanded="false"
       span Transmission
+      .checked-filter.hidden
     .filter-content.collapse.transmission-field
-      = f.input 'transmission', as: :select, collection: capitalized_transmissions, include_blank: 'Select transmission', label: false, label_method: :titleize
+      = f.input :transmission, as: :select, collection: capitalized_transmissions, include_blank: 'Select transmission', label: false, label_method: :titleize, selected: sanitized_search_param(params, :transmission)
 
     .filter-title data-target=".year-field" data-toggle="collapse" aria-expanded="false"
       span Year
+      .checked-filter.hidden
     .filter-content.collapse.year-field
       .row
         .col-md-6
-          = f.input 'year_from', min: 1990, max: DateTime.now.year, input_html: { type: 'number' }, label: false, placeholder: 'From...'
+          = f.input :year_from, min: 1990, max: DateTime.now.year, input_html: { type: 'number', value: sanitized_search_param(params, :year_from) }, label: false, placeholder: 'From...'
         .col-md-6
-          = f.input 'year_to', min: 1990, max: DateTime.now.year, input_html: { type: 'number' }, label: false, placeholder: 'To...'
+          = f.input :year_to, min: 1990, max: DateTime.now.year, input_html: { type: 'number', value: sanitized_search_param(params, :year_to) }, label: false, placeholder: 'To...'
 
 
     .filter-title data-target=".daterange-field" data-toggle="collapse" aria-expanded="false"
       span Availability
+      .checked-filter.hidden
     .filter-content.collapse.daterange-field
-      = f.input :availability, input_html: { class: "daterange" }, as: :string, label: false, include_blank: ''
+      = f.input :availability, input_html: { class: "daterange", value: sanitized_search_param(params, :availability)}, as: :string, label: false, include_blank: ''
 
     = f.submit 'Refresh', class: 'btn btn-sm btn-block btn-search js-refresh-filter mt-3'
