fixed navbar title for small screens

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -153,3 +153,12 @@ nav.navbar {
   background: #CFDBE1;
   color: black;
 }
+
+@media (max-width: 768px) {
+  .navbar {
+    .navbar-dark .navbar-brand {
+    font-size: 17px;
+    }
+  }
+
+}
