more mobile friendly uex on post show

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -198,9 +198,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 
     p {
       padding: 15px;
+      margin-top: 1rem;
 
       i {
         padding-right: 5px;
