--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -9,7 +9,7 @@
       hr
   .row
     .col-md-7
-      .subtitle-container style='height: 100px;'
+      .subtitle-container
         h5.subtitle Main Information
         hr
         .row
