--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -6,14 +6,13 @@ nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
     ul.navbar-nav
       = navbar_item(root_path, :home)
       - if current_user
-        = navbar_item(posts_path, :my_rentals, nil, 'w-115')
+        = navbar_item(profile_index_path, :profile, nil)
         = navbar_item(conversations_path, :messages, current_user)
     .navbar-collapse.collapse.w-100.order-3.dual-collapse2
       ul.navbar-nav.ml-auto.text-white
         - if current_user
           .mt-2.mr-3  = current_user.full_name
           = dropdown_navbar_item((render 'shared/users/navbar_photo'), '') do
-            = link_to t('navigation.profile'), profile_index_path, class: 'dropdown-item'
             = link_to t('navigation.account'), edit_user_registration_path, class: 'dropdown-item'
             = link_to t('navigation.logout'), destroy_user_session_path, method: :delete, class: 'dropdown-item'
           end
